travis CI auto builder

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ var _hmt = _hmt || [];
 
     <header id="banner" class="wrapper">
   <div class="inner">
-    <h2 id="banner-title">QeePHP 一个与众不同的框架i</h2>
+    <h2 id="banner-title">QeePHP 一个与众不同的框架</h2>
     <div id="banner-start">
       <span id="banner-start-command">git clone https://github.com/jackLucky/qeephp.git </span><a id="banner-start-link" href="/QeePHPDoc/guide/"><i class="fa fa-arrow-right"></i></a>
     </div>
