travis CI auto builder

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <!-- endbuild -->
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/docsearch.js/1/docsearch.min.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.css" />
   <!-- RSS -->
   <link rel="alternate" href="/QeePHPDoc/atom.xml" title="QeePHP文档">
   <!-- Open Graph -->
@@ -86,13 +86,17 @@ var _hmt = _hmt || [];
   <div class="inner">
     <h2 id="banner-title">QeePHP 一个与众不同的框架</h2>
     <div id="banner-start">
-      <span id="banner-start-command">git clone https://github.com/jackLucky/qeephp.git </span><a id="banner-start-link" href="/QeePHPDoc/guide/"><i class="fa fa-arrow-right"></i></a>
+      <span id="banner-start-command">https://github.com/jackLucky/qeephp.git </span><a id="banner-start-link" href="/QeePHPDoc/guide/"><i class="fa fa-arrow-right"></i></a>
     </div>
     <div id="banner-share"><!-- GitHub Star -->
 <a class="github-button" href="https://github.com/jackLucky/QeePHPDoc" data-count-href="/jackLucky/QeePHPDoc/stargazers" data-count-api="/repos/jackLucky/QeePHPDoc#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star jackLucky/QeePHPDoc on GitHub">Star</a>
 <!-- GitHub fork -->
 <a class="github-button" href="https://github.com/jackLucky/QeePHPDoc/fork" data-count-href="/jackLucky/QeePHPDoc/network" data-count-api="/repos/jackLucky/QeePHPDoc#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork jackLucky/QeePHPDoc on GitHub">Fork</a>
-<!-- Tweet button -->
+
+<!-- Build status-->
+<a href="https://github.com/jackLucky/QeePHPDoc/fork" >
+  <img src="https://travis-ci.org/jackLucky/QeePHPDoc.svg?branch=master" />
+</a>
 
 </div>
   </div>
@@ -191,7 +195,7 @@ var _hmt = _hmt || [];
 
 <!-- Algolia -->
 
-<script type="text/javascript" src="https://cdn.jsdelivr.net/docsearch.js/1/docsearch.min.js"></script>
+<script type="text/javascript" src="https://cdn.jsdelivr.net/docsearch.js/2/docsearch.min.js"></script>
 <script type="text/javascript">
 document.getElementById('search-input-wrap').classList.add('on');
 docsearch({
