--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ var _hmt = _hmt || [];
   <div class="inner">
     <h2 id="banner-title">QeePHP 一个与众不同的框架</h2>
     <div id="banner-start">
-      <span id="banner-start-command">https://github.com/jackLucky/qeephp.git </span><a id="banner-start-link" href="/QeePHPDoc/guide/"><i class="fa fa-arrow-right"></i></a>
+      <span id="banner-start-command"><p class="start-line">git clone https://github.com/jackLucky/qeephp.git</p> </span><a id="banner-start-link" href="/QeePHPDoc/guide/"><i class="fa fa-arrow-right"></i></a>
     </div>
     <div id="banner-share"><!-- GitHub Star -->
 <a class="github-button" href="https://github.com/jackLucky/QeePHPDoc" data-count-href="/jackLucky/QeePHPDoc/stargazers" data-count-api="/repos/jackLucky/QeePHPDoc#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star jackLucky/QeePHPDoc on GitHub">Star</a>
